--- a/style.css
+++ b/style.css
@@ -161,13 +161,6 @@ float:right;
 	width: 80px;
 	margin: 5px 5px 10px 35px;
 }
-select[id="selectInstituteDropDownInFilterBy"]{
-   text-align: center;
-	float:left;
-width: 220px;
-border-radius: 5px;
-font-size: 20pt;
-}
 
 p[id="instituteIDLabelInFilterBy"]{
 	float:left;
@@ -203,17 +196,6 @@ p[id="adminTypeLabelInFilterBy"]{
 	width: 85px;
 	padding: 0px;
 	float:left;
-}
-select[id="selectAdminTypeDropBoxInFilterBy"]{
-    margin: 0px 5px 10px 5px;
-	padding: 0px;
-	float:left;
-    text-align: center;
-	float:left;
-    width: 220px;
-    border-radius: 5px;
-    font-size: 20pt;
-    border-width:1px;
 }
 
 p[id="UserIDLabelInFilterBy"]{
@@ -424,6 +406,16 @@ div[id="saveOrCancelButtons"]{
 	margin: 28px 0px 0px 0px;
 
 }
+
+div[class="selectProgramContainer_ViewProgram"]{
+    background-color: #b3c1d6;
+	width: 976px;
+	height: 1170px;
+	border-style: solid;
+	border-color: black;
+	border-width: 1px;
+	margin: 28px 0px 0px 0px;
+}
 select[id="cmbselectAdminTypeInSelectUser"]{
     margin: 0px 0px 0px 5px;
 	padding: 0px;
@@ -490,8 +482,7 @@ h4[id="programInformationHeader"]{
 
 /* Start Career Course Div */
 div[id="CareerCoursesDiv"]{
-    align-content:  right;
-	width: 450px;
+   	width: 450px;
     height: 420px;
 	background-color: #858fa0;
 	padding: 10px;
@@ -548,4 +539,55 @@ input[class="commonBtnInMappingPrograms"]{
     height: 30px;
     margin: 5px;
 }
-/* End div in mappingPrograms_SelectProgram */ 
+/* End div in mappingPrograms_SelectProgram */
+
+/* Start div in generalEduInSelectProgram*/
+div[id="generalEduInSelectProgram"]{
+     align-content:  right;
+	width: 420px;
+    height: 420px;
+	background-color: #858fa0;
+	padding: 10px;
+	float: right;
+	margin: 20px 20px 20px 5px;
+	border-style: solid;
+	border-color: black;
+	border-width: 1px;
+	border-radius: 10px;
+}
+
+input[class="commonBtnInViewPrograms"]{
+     font-size: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 10px;
+    width: 120px;
+    height: 30px;
+    margin: 5px;
+}
+input[class="commonBtn2InViewPrograms"]{
+     font-size: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 10px;
+    width: 150px;
+    height: 30px;
+    margin: 5px;
+}
+input[class="commonBtn3InViewPrograms"]{
+     font-size: 10px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 3px;
+    width: 70px;
+    height: 20px;
+    margin: 2px;
+}
+
+p[id="lblPID_viewPrograms"]{
+    margin: 15px 3px 10px 25px;
+    float: left
+}
