--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ display: inline-block;
 
 /* This is div viewUserMultiLineSelect for viewUsers page */
 .viewUsersMultilineSelect{
+    background-color: #858fa0;
 border-style: solid;
 border-width: 1px;
 border-radius: 10px;
@@ -143,7 +144,8 @@ p[id="adminTypeLabel"]{
 
 /* This is for Div filterBy in viewUserPage*/
 
-.filterBy{
+div[class="filterByInViewUsers"]{
+    background-color: #858fa0; 
 	border-style: solid;
 border-width: 1px;
 border-radius: 10px;
@@ -261,7 +263,7 @@ input[id="searchButtonInFilterBy"]{
 
 }
 div[class="chooseInstituteBox"]{
-	width: 400px;
+	width: 410px;
 	height: 200px;
 }
 
@@ -269,13 +271,17 @@ p[id="instituteLabelInviewUser_selectUser"]{
     width:70px;
     height: 15px;
     float:left;
-    margin: 10px 15px 5px 40px;
+    margin: 8px 25px 8px 10px;
+    font-size: 20px;
 }
-select[id="selectInstituteDropDownInviewUser_selectUser"]{
+select[id="selectInstituteDropDownInviewUser_selectUser"]
+{
 	text-align: center;
 	float:left;
-width: 220px;
+width: 300px;
 border-radius: 5px;
+    border-width: 2px;
+    border-color: black;
 font-size: 20pt;
 }
 
@@ -284,9 +290,9 @@ p[id="positionLabelInInstitutionBox"]{
 	font-size: 20px;
 	padding: 0px;
 	border: 0px;
-	width: 100px;
+	width: 70px;
 	float:left;
-	margin: 25px 0px 0px 25px; 
+	margin: 25px 0px 0px 30px; 
 }
 input[id="addUserPosition"]{
 	display: inline-block;
@@ -298,7 +304,7 @@ input[id="addUserPosition"]{
 	border-radius: 4px;
 	box-sizing: border-box;
 	margin: 2px;
-	width: 150px;
+	width: 200px;
 	height: 43px;
 	margin: 15px 2px 2px 5px;
 }
@@ -308,9 +314,9 @@ p[id="linkLabelInInstitutionBox"]{
 	font-size: 20px;
 	padding: 0px;
 	border: 0px;
-	width: 60px;
+	width: 50px;
 	float:left;
-	margin: 25px 0px 0px 60px;
+	margin: 25px 10px 0px 45px;
 }
 
 input[id="addUserInfoLink"]{
@@ -323,9 +329,9 @@ input[id="addUserInfoLink"]{
 	border-radius: 4px;
 	box-sizing: border-box;
 	margin: 2px;
-	width: 150px;
+	width: 300px;
 	height: 43px;
-	margin: 15px 2px 2px 10px;
+	margin: 15px 2px 2px 0px;
 }
 
 /*  end div addUserForm right in viewUser_SelectUser */
@@ -354,6 +360,7 @@ font-size: 18pt;
 
 /* Start of div multiLine select in view Programs */
 .viewProgramsMultilineSelect{
+    background-color: #858fa0;
 border-style: solid;
 border-width: 1px;
 border-radius: 10px;
@@ -375,6 +382,12 @@ select[id="selectProgram"]{
 }
 
 /* end of div multiLine select in view Programs */ 
+
+
+/*Start filter By div In view Programs */
+
+
+/*End filter By div In view Programs */
 input[id="applyFilterButten"]{
 	margin: 0px 0px 0px 200px;
 }
@@ -410,7 +423,7 @@ div[id="saveOrCancelButtons"]{
 div[class="selectProgramContainer_ViewProgram"]{
     background-color: #b3c1d6;
 	width: 976px;
-	height: 1170px;
+	height: 1370px;
 	border-style: solid;
 	border-color: black;
 	border-width: 1px;
@@ -421,9 +434,11 @@ select[id="cmbselectAdminTypeInSelectUser"]{
 	padding: 0px;
     text-align: center;
     width: 200px;
+    height: 40px;
+    border-color: black;
     border-radius: 5px;
     font-size: 20pt;
-    border-width:1px;
+    border-width:2px;
 }
 input[id="searchByInstituteID"]{
 	display: inline-block;
@@ -442,7 +457,7 @@ input[id="searchByInstituteID"]{
 div[id="programInfoInSelectProgram"]{
     align-content:  right;
 	width: 450px;
-    height: 420px;
+    height: 480px;
 	background-color: #858fa0;
 	padding: 10px;
 	float: left;
@@ -465,6 +480,19 @@ input[class="commonTxtBoxCSS"]{
 	width: 200px;
 	height: 43px;
 }
+input[class="commonTxtBox2CSS"]{
+    display: inline-block;
+		font-size: 10pt;
+	padding: 3px 10px;
+	border-width: 2px;
+	border-style: solid;
+	border-color: black;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin: 2px;
+	width: 300px;
+	height: 43px;
+}
 select[class="commonCmbBoxCSS"]{
     margin: 0px 0px 0px 5px;
 	padding: 0px;
@@ -473,15 +501,38 @@ select[class="commonCmbBoxCSS"]{
     border-radius: 5px;
     font-size: 20pt;
     border-width:1px;
+    border-color: black;
+    margin: 2px;
 }
+select[class="commonCmbBox2CSS"]{
+    margin: 0px 0px 0px 5px;
+	padding: 0px;
+    text-align: center;
+    width: 250px;
+    border-radius: 5px;
+    font-size: 20pt;
+    border-width:1px; 
+}
+
+
 h4[id="programInformationHeader"]{
     text-align: center;
 }
 
 /* End div in viewProgram_SelectProgram  */
-
+div[class="filterByInViewPrograms"]{
+background-color: #858fa0; 
+	border-style: solid;
+border-width: 1px;
+border-radius: 10px;
+width: 450px;
+height: 400px;
+margin: 20px 10px 20px 0px;
+float:right;
+}
 /* Start Career Course Div */
 div[id="CareerCoursesDiv"]{
+    
    	width: 450px;
     height: 420px;
 	background-color: #858fa0;
@@ -497,8 +548,7 @@ div[id="CareerCoursesDiv"]{
 div[id="CareerCourseSubDiv"]{
     margin: 25px 5px 10px 5px;
     width: 400px;
-    height: 200px;
-    
+    height: 110px;
 }
 
 /* End Career Course Div */
@@ -509,7 +559,7 @@ div[id="CareerCourseSubDiv"]{
 div[id="mappingProgramsDiv"]{
     align-content:  right;
 	width: 420px;
-    height: 420px;
+    height: 480px;
 	background-color: #858fa0;
 	padding: 10px;
 	float: right;
@@ -523,6 +573,74 @@ div[id="mappingProgramsDiv"]{
 h4[id="mappingProgramHeader"]{
     text-align: center;
 }
+
+/* Start div in Sub mapping Programs_SelectProgram */
+
+#mappingSubDivInSelectProgram.divMappingSub{
+    
+    width:420px;
+    height: 250px;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 5px;
+}
+#mappingSubDivInAddProgram.divMappingSub{
+    width:420px;
+    height: 250px;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 5px;
+}
+h4.mappingSubHeader{
+    text-align: center;
+    margin: 0px;
+}
+select[class="selectInstituteDropDownInSubMapping_selectProgram"]{
+    text-align: center;
+	float:left;
+width: 380px;
+border-radius: 5px;
+    border-width: 2px;
+    border-color: black;
+font-size: 20pt;
+}
+select[class="selectInstituteDropDownInSubMapping_AddProgram"]{
+    text-align: center;
+	float:left;
+width: 380px;
+border-radius: 5px;
+    border-width: 2px;
+    border-color: black;
+font-size: 20pt;
+}
+
+select[class="selectProgramDropDownInSubMapping_selectProgram"]{
+    text-align: center;
+	float:left;
+width: 380px;
+border-radius: 5px;
+    border-width: 2px;
+    border-color: black;
+font-size: 20pt;
+}
+select[class="selectProgramDropDownInSubMapping_AddProgram"]{
+    text-align: center;
+	float:left;
+width: 380px;
+border-radius: 5px;
+    border-width: 2px;
+    border-color: black;
+font-size: 20pt;
+}
+
+
+
+/* End div in Sub mapping Programs_SelectProgram */
+
+
+/* End div in mappingPrograms_SelectProgram */
 
 select[id="selectProgramDropDown1"]{
     width: 200px;
@@ -555,6 +673,17 @@ div[id="generalEduInSelectProgram"]{
 	border-width: 1px;
 	border-radius: 10px;
 }
+#addCourseInGenEdReq.commonBtnInMappingPrograms{
+     font-size: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 10px;
+    width: 120px;
+    height: 30px;
+    margin: 5px;
+    float: left;
+}
 
 input[class="commonBtnInViewPrograms"]{
      font-size: 15px;
@@ -586,8 +715,42 @@ input[class="commonBtn3InViewPrograms"]{
     height: 20px;
     margin: 2px;
 }
+input[class="commonBtnInCareerCourses"]{
+    font-size: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 10px;
+    width: 120px;
+    height: 30px;
+    margin: 5px;
+    float: left;
+}
 
 p[id="lblPID_viewPrograms"]{
     margin: 15px 3px 10px 25px;
     float: left
+}
+
+textarea[class="textarea1InSelectProgram"]{
+    width:200px;
+    height: 150px;
+    border-width: 1px;
+	border-color: black;
+	border-radius: 5px;
+    margin: 5px;
+}
+textarea[class="textarea1InAddProgram"]{
+    width:200px;
+    height: 150px;
+    border-width: 1px;
+	border-color: black;
+	border-radius: 5px;
+    margin: 5px;
+}
+h4[class="careerCourseHeader"]{
+    text-align: center;
+}
+h4[class="genEdReqHeader"]{
+    text-align: center;
 }
