--- a/style.css
+++ b/style.css
@@ -550,6 +550,19 @@ input[class="commonTxtBox2CSS"]{
 	width: 300px;
 	height: 43px;
 }
+input[class="commonTxtBox3CSS"]{
+    display: block;
+		font-size: 10pt;
+	padding: 3px 10px;
+	border-width: 2px;
+	border-style: solid;
+	border-color: black;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin: auto;
+	width: 380px;
+	height: 43px;
+}
 
 select[class="commonCmbBoxCSS"]{
     margin: 0px 0px 0px 5px;
@@ -815,8 +828,8 @@ textarea[class="textarea1InSelectProgram"]{
     margin: 5px;
 }
 textarea[class="textarea1InAddProgram"]{
-    width:200px;
-    height: 150px;
+  width:380px;
+    height: 80px;
     border-width: 1px;
 	border-color: black;
 	border-radius: 5px;
@@ -830,6 +843,10 @@ h4[class="genEdReqHeader"]{
     text-align: center;
     margin: 0px;
 }
+p[class="programURL_addProgram"]{
+    margin: 0px;
+    text-align: center;
+}
 p[class="programURL_selectProgram"]{
     margin: 0px;
     text-align: center;
@@ -841,7 +858,21 @@ form[class="frmViewTranserInfoInSelectProgram"]{
     height: 40px;
     float:left;
 }
+form[class="frmViewTranserInfoInAddProgram"]{
+    display: block;
+    margin: auto;
+    width: 190px;
+    height: 40px;
+    float:left;
+}
 form[class="frmRemoveProgramInSelectProgram"]{
+    display: block;
+    margin: auto;
+    width: 190px;
+    height: 40px;
+    float:left;
+}
+form[class="frmRemoveProgramIn_AddProgram"]{
     display: block;
     margin: auto;
     width: 190px;
