--- a/style.css
+++ b/style.css
@@ -1,53 +1,64 @@
-body{
-background-color: #f4f5f7;
-}
-
-.GlobalAdminsHeader{
-	background-color: #bfefff;
-	color: #2b1459;
-width: 976px;
-text-align: center;
-
-}
 /*Beginning of new nav bar css code */
 /*Testing 1,2,3 */
 
 ul {
-   list-style-type: none;
-   margin: 0;
-   padding: 0;
-   overflow: hidden;
-   background-color: #333;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
 
 li {
-   float: left;
+    float: left;
 }
 
 li a, .dropbtn {
-   display: inline-block;
-   color: white;
-   text-align: center;
-   padding: 14px 16px;
-   text-decoration: none;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-   background-color: black;
+    background-color: black;
 }
 
 li.dropdown {
-   display: inline-block;
+    display: inline-block;
 }
 
 .dropdown-content {
-   display: none;
-   position: absolute;
-   background-color: #f9f9f9;
-   min-width: 160px;
-   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-   z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/*End Testing */
+
+option select{
+    font-size: 10px;
+}
+
+
 
 #adminTable{
 	text-align: center;
@@ -189,7 +200,7 @@ float:right;
 	padding: 0px;
 	border: 0px;
 	width: 80px;
-	margin: 5px 5px 5px 35px;
+	margin: 5px 5px 0px 35px;
 }
 
 p[id="instituteIDLabelInFilterBy"]{
@@ -590,7 +601,7 @@ select[class="commonCmbBox3CSS"]{
     text-align: center;
     width: 300px;
     border-radius: 5px;
-    font-size: 20pt;
+    font-size: 18pt;
     border-width: 1px; 
 }
 
@@ -687,7 +698,7 @@ width: 380px;
 border-radius: 5px;
     border-width: 2px;
     border-color: black;
-font-size: 20pt;
+font-size: 15pt;
 }
 select[class="selectInstituteDropDownInSubMapping_AddProgram"]{
     text-align: center;
@@ -696,7 +707,7 @@ width: 380px;
 border-radius: 5px;
     border-width: 2px;
     border-color: black;
-font-size: 20pt;
+font-size: 15pt;
 }
 
 select[class="selectProgramDropDownInSubMapping_selectProgram"]{
@@ -706,7 +717,7 @@ width: 380px;
 border-radius: 5px;
     border-width: 2px;
     border-color: black;
-font-size: 20pt;
+font-size: 15pt;
 }
 select[class="selectProgramDropDownInSubMapping_AddProgram"]{
     text-align: center;
@@ -715,7 +726,7 @@ width: 380px;
 border-radius: 5px;
     border-width: 2px;
     border-color: black;
-font-size: 20pt;
+font-size: 15pt;
 }
 
 
@@ -742,6 +753,16 @@ input[class="commonBtnInMappingPrograms"]{
 	border-radius: 10px;
     width: 180px;
     height: 30px;
+    margin: 5px;
+}
+input[class="btnAddTransferInformationInSelectedProgram"]{
+    font-size: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 5px;
+    width: 100px;
+    height: 23px;
     margin: 5px;
 }
 /* End div in mappingPrograms_SelectProgram */
