--- a/InstitutionAdmin/IA_addInstitutionUsers.css
+++ b/InstitutionAdmin/IA_addInstitutionUsers.css
@@ -55,7 +55,7 @@ li.dropdown {
 /*End Testing */
 .container{
 width: 976px;
-height: 590px;
+height: 580px;
 margin-left: auto;
 margin-right: auto;
 background-color: #b3c1d6;
@@ -74,7 +74,7 @@ font-size: 18pt;
 .addUserForm{
 	align-content:  right;
 	width: 450px;
-    height: 330px;
+    height: 250px;
 	background-color: #858fa0;
 	padding: 10px;
 	float: left;
@@ -102,7 +102,7 @@ display: inline-block;
 .institute_addUser{
 	background-color: #858fa0;
 	width: 400px;
-	height: 220px;
+	height: 250px;
 	padding: 12px 20px;
 	float: right;
 	border-color:black;
@@ -130,7 +130,46 @@ select[class="commonCmbBox3CSS"]{
 	padding: 0px;
     text-align: center;
     width: 300px;
+    height: 40px;
     border-radius: 5px;
     font-size: 18pt;
     border-width: 1px; 
+    font-size: 15px;
 }
+textarea{
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+/* Start Div Save or Cancel Button */
+
+div[id="saveOrCancelButtons"]{
+	width:900px;
+	height: 50px;
+	float: right;
+}
+
+form[class="saveChangesToUserName"]{
+	text-align: center;
+	width: 160px;
+	margin: 0px 0px 0px 260px; 
+	float: left;
+}
+form[class="cancelChangesToUserName"]{
+	text-align: center;
+	width: 160px;
+	margin: 0px 300px 0px 00px; 
+	float: right;
+}
+
+input[class="commonBtn2InViewPrograms"]{
+     font-size: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 10px;
+    width: 150px;
+    height: 30px;
+    margin: 5px;
+}
+/* End div save or cancel button*/
