--- a/viewAgreementsStyle.css
+++ b/viewAgreementsStyle.css
@@ -9,34 +9,17 @@ width: 976px;
 text-align: center;
 }
 
-.viewInstitutionHeader{
+.viewAgreementHeader{
 	background-color: #bfefff;
 	color: #2b1459;
-width: 976px;
+width: 960px;
 text-align: center;
 font-size: 18pt;
 }
 
-.viewInstitutionsMultilineSelect{
-border-style: solid;
-border-width: 2px;
-width: 470px;
-height: 500px;
-margin: 20px;
-float:left;
-}
-
-select[id="selectInstitution"]{
-	margin: 10px;
-	text-align: center;
-width: 440px;
-height: 430px;
-white-space: wrap;
-font-size: 20pt;
-}
-
 
 .navigationBar{
+
 background-color: #858fa0;
 font-size: 18pt;
 border-style: solid;
@@ -51,8 +34,8 @@ border-width: 2px;
 border-color: red;
 }
 .container{
-width: 976px;
-height: 1500px;
+width: 1200px;
+height: 1300px;
 margin-left: auto;
 margin-right: auto;
 background-color: #b3c1d6;
@@ -61,57 +44,32 @@ border-width: 2px;
 border-color: black;
 }
 
-.filterBy{
-	border-style: solid;
-border-width: 2px;
-width: 400px;
-height: 500px;
-margin: 20px;
-float:right;
+.FromInstitute
+{
+    margin:30px 0px 30px 110px;
+}
+
+.ToInstitute
+{
+    margin: 30px 100px 30px 30px;
+}
+
+#Continue
+{
+    margin: 20px;
 }
 
 
-input[id="navigationBarButton"]{
-	font-size: 12pt;
-	border-style: solid;
-	border-radius: 5px;
-	border-color: black;
-	border-width: 1px;
-	margin: 2px;
-	height: 30px;
+.vbp_InstituteA
+{
+   float:left;
+    margin:0px 0px 0px 300px;
 }
 
-h2[id="filterByHeader"]{
-	margin: 5px;
-	text-align: center;
-	padding: 0px;
-}
-
-p[id="instituteIDLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-
-p[id="userIDLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-
-p[id="adminTypeLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-select[id="selectAdminType"]{
-		margin: 5px 80px 5px 5px;
-	width: 200px;
-	padding: 0px;
-	float:right;
+.vbp_InstituteB
+{
+    float:right;
+    margin:0px 300px 0px 0px;
 }
 
 /*Testing 1,2,3 */
@@ -166,5 +124,6 @@ li.dropdown {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-/*End Testing */
 
+
+/*End Testing */
