--- a/removeAgreementStyle.css
+++ b/removeAgreementStyle.css
@@ -9,17 +9,34 @@ width: 976px;
 text-align: center;
 }
 
-.viewAgreementHeader{
+.removeAgreementHeader{
 	background-color: #bfefff;
 	color: #2b1459;
-width: 1200px;
+width: 976px;
 text-align: center;
 font-size: 18pt;
 }
 
+.viewAgreements{
+border-style: solid;
+border-width: 2px;
+width: 470px;
+height: 550px;
+margin: 20px;
+float:left;
+}
+
+select[id="selectAgreement"]{
+	margin: 10px;
+	text-align: center;
+width: 440px;
+height: 430px;
+white-space: wrap;
+font-size: 20pt;
+}
+
 
 .navigationBar{
-
 background-color: #858fa0;
 font-size: 18pt;
 border-style: solid;
@@ -34,8 +51,8 @@ border-width: 2px;
 border-color: red;
 }
 .container{
-width: 1200px;
-height: 1150px;
+width: 976px;
+height: 800px;
 margin-left: auto;
 margin-right: auto;
 background-color: #b3c1d6;
@@ -44,32 +61,57 @@ border-width: 2px;
 border-color: black;
 }
 
-.FromInstitute
-{
-    margin:30px 0px 30px 110px;
-}
-
-.ToInstitute
-{
-    margin: 30px 100px 30px 30px;
-}
-
-#Continue
-{
-    margin: 20px;
+.filterBy{
+	border-style: solid;
+border-width: 2px;
+width: 400px;
+height: 550px;
+margin: 20px;
+float:right;
 }
 
 
-.vbp_InstituteA
-{
-   float:left;
-    margin:0px 0px 0px 30px;
+input[id="navigationBarButton"]{
+	font-size: 12pt;
+	border-style: solid;
+	border-radius: 5px;
+	border-color: black;
+	border-width: 1px;
+	margin: 2px;
+	height: 30px;
 }
 
-.vbp_InstituteB
-{
-    float:right;
-    margin:0px 30px 0px 0px;
+h2[id="filterByHeader"]{
+	margin: 5px;
+	text-align: center;
+	padding: 0px;
+}
+
+p[id="instituteIDLabel"]{
+	margin: 5px;
+	width: 100px;
+	padding: 0px;
+	float:left;
+}
+
+p[id="userIDLabel"]{
+	margin: 5px;
+	width: 100px;
+	padding: 0px;
+	float:left;
+}
+
+p[id="adminTypeLabel"]{
+	margin: 5px;
+	width: 100px;
+	padding: 0px;
+	float:left;
+}
+select[id="selectAdminType"]{
+		margin: 5px 80px 5px 5px;
+	width: 200px;
+	padding: 0px;
+	float:right;
 }
 
 /*Testing 1,2,3 */
@@ -124,6 +166,4 @@ li.dropdown {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
-
 /*End Testing */
