--- a/OldCss/removeAgreementStyle.css
+++ b/OldCss/removeAgreementStyle.css
@@ -2,14 +2,7 @@ body{
 background-color: #f4f5f7;
 }
 
-.GlobalAdminsHeader{
-	background-color: #bfefff;
-	color: #2b1459;
-width: 976px;
-text-align: center;
-}
-
-.viewInstitutionHeader{
+.removeAgreementHeader{
 	background-color: #bfefff;
 	color: #2b1459;
 width: 976px;
@@ -17,16 +10,16 @@ text-align: center;
 font-size: 18pt;
 }
 
-.viewInstitutionsMultilineSelect{
+.viewAgreements{
 border-style: solid;
 border-width: 2px;
 width: 470px;
-height: 500px;
+height: 550px;
 margin: 20px;
 float:left;
 }
 
-select[id="selectInstitution"]{
+select[id="selectAgreement"]{
 	margin: 10px;
 	text-align: center;
 width: 440px;
@@ -35,24 +28,9 @@ white-space: wrap;
 font-size: 20pt;
 }
 
-
-.navigationBar{
-background-color: #858fa0;
-font-size: 18pt;
-border-style: solid;
-padding: 20px;
-margin: 20px;
-
-}
-#adminTable{
-	text-align: center;
-	color: #002056;
-border-width: 2px;
-border-color: red;
-}
 .container{
 width: 976px;
-height: 1000px;
+height: 800px;
 margin-left: auto;
 margin-right: auto;
 background-color: #b3c1d6;
@@ -65,54 +43,11 @@ border-color: black;
 	border-style: solid;
 border-width: 2px;
 width: 400px;
-height: 500px;
+height: 550px;
 margin: 20px;
 float:right;
 }
 
-
-input[id="navigationBarButton"]{
-	font-size: 12pt;
-	border-style: solid;
-	border-radius: 5px;
-	border-color: black;
-	border-width: 1px;
-	margin: 2px;
-	height: 30px;
-}
-
-h2[id="filterByHeader"]{
-	margin: 5px;
-	text-align: center;
-	padding: 0px;
-}
-
-p[id="instituteIDLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-
-p[id="userIDLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-
-p[id="adminTypeLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-select[id="selectAdminType"]{
-		margin: 5px 80px 5px 5px;
-	width: 200px;
-	padding: 0px;
-	float:right;
-}
 
 /*Testing 1,2,3 */
 
