--- a/OldCss/addCourseStyle.css
+++ b/OldCss/addCourseStyle.css
@@ -2,74 +2,24 @@ body{
 background-color: #f4f5f7;
 }
 
-.GlobalAdminsHeader{
+
+.addCourseHeader{
 	background-color: #bfefff;
 	color: #2b1459;
 width: 976px;
 text-align: center;
-}
-
-.viewAgreementHeader{
-	background-color: #bfefff;
-	color: #2b1459;
-width: 1200px;
-text-align: center;
 font-size: 18pt;
 }
 
-
-.navigationBar{
-
-background-color: #858fa0;
-font-size: 18pt;
-border-style: solid;
-padding: 20px;
-margin: 20px;
-
-}
-#adminTable{
-	text-align: center;
-	color: #002056;
-border-width: 2px;
-border-color: red;
-}
 .container{
-width: 1200px;
-height: 1100px;
+width: 976px;
+height: 1000px;
 margin-left: auto;
 margin-right: auto;
 background-color: #b3c1d6;
 border-style: solid;
 border-width: 2px;
 border-color: black;
-}
-
-.FromInstitute
-{
-    margin:30px 0px 30px 110px;
-}
-
-.ToInstitute
-{
-    margin: 30px 100px 30px 30px;
-}
-
-#Continue
-{
-    margin: 20px;
-}
-
-
-.vbp_InstituteA
-{
-   float:left;
-    margin:0px 0px 0px 300px;
-}
-
-.vbp_InstituteB
-{
-    float:right;
-    margin:0px 300px 0px 0px;
 }
 
 /*Testing 1,2,3 */
