--- a/OldCss/createAgreementStyle.css
+++ b/OldCss/createAgreementStyle.css
@@ -2,14 +2,7 @@ body{
 background-color: #f4f5f7;
 }
 
-.GlobalAdminsHeader{
-	background-color: #bfefff;
-	color: #2b1459;
-width: 976px;
-text-align: center;
-}
-
-.viewAgreementHeader{
+.createAgreementHeader{
 	background-color: #bfefff;
 	color: #2b1459;
 width: 1200px;
@@ -17,25 +10,9 @@ text-align: center;
 font-size: 18pt;
 }
 
-
-.navigationBar{
-
-background-color: #858fa0;
-font-size: 18pt;
-border-style: solid;
-padding: 20px;
-margin: 20px;
-
-}
-#adminTable{
-	text-align: center;
-	color: #002056;
-border-width: 2px;
-border-color: red;
-}
 .container{
 width: 1200px;
-height: 1150px;
+height: 1500px;
 margin-left: auto;
 margin-right: auto;
 background-color: #b3c1d6;
@@ -59,21 +36,7 @@ border-color: black;
     margin: 20px;
 }
 
-
-.vbp_InstituteA
-{
-   float:left;
-    margin:0px 0px 0px 30px;
-}
-
-.vbp_InstituteB
-{
-    float:right;
-    margin:0px 30px 0px 0px;
-}
-
-/*Testing 1,2,3 */
-
+/*Testing Testing 1,2,3 */
 ul {
     list-style-type: none;
     margin: 0;
