--- a/OldCss/viewAgreementsByPrograms.css
+++ b/OldCss/viewAgreementsByPrograms.css
@@ -2,57 +2,36 @@ body{
 background-color: #f4f5f7;
 }
 
-.GlobalAdminsHeader{
-	background-color: #bfefff;
-	color: #2b1459;
-width: 976px;
-text-align: center;
-}
 
-.addCourseHeader{
+.viewAgreementHeader{
 	background-color: #bfefff;
 	color: #2b1459;
-width: 976px;
+width: 1200px;
 text-align: center;
 font-size: 18pt;
 }
 
-.AddCourseInformation{
-
-}
-
-.testDiv
-{
-    width: 1000px;
-    height: 1000px;
-    
-}
-
-.navigationBar{
-
-	
-	background-color: #858fa0;
-	font-size: 18pt;
-border-style: solid;
-padding: 20px;
-margin: 20px;
-
-}
-#adminTable{
-	text-align: center;
-	color: #002056;
-border-width: 2px;
-border-color: red;
-}
 .container{
-width: 976px;
-height: 1000px;
+width: 1200px;
+height: 1150px;
 margin-left: auto;
 margin-right: auto;
 background-color: #b3c1d6;
 border-style: solid;
 border-width: 2px;
 border-color: black;
+}
+
+.vbp_InstituteA
+{
+   float:left;
+    margin:0px 0px 0px 30px;
+}
+
+.vbp_InstituteB
+{
+    float:right;
+    margin:0px 30px 0px 0px;
 }
 
 /*Testing 1,2,3 */
