--- a/OldCss/viewAgreementsStyle.css
+++ b/OldCss/viewAgreementsStyle.css
@@ -9,101 +9,23 @@ width: 976px;
 text-align: center;
 }
 
-.AddInstitutionHeader{
+.viewAgreementHeader{
 	background-color: #bfefff;
 	color: #2b1459;
-width: 976px;
+width: 960px;
 text-align: center;
 font-size: 18pt;
 }
 
-.institutionInformationTable{
-border-style: solid;
-border-width: 2px;
-width: 470px;
-height: 650px;
-margin: 20px;
-float:left;
-}
-
-.navigationBar{
-
-	
-	background-color: #858fa0;
-	font-size: 18pt;
-border-style: solid;
-padding: 20px;
-margin: 20px;
-
-}
-#adminTable{
-	text-align: center;
-	color: #002056;
-border-width: 2px;
-border-color: red;
-}
 .container{
-width: 976px;
-height: 1100px;
+width: 1200px;
+height: 1300px;
 margin-left: auto;
 margin-right: auto;
 background-color: #b3c1d6;
 border-style: solid;
 border-width: 2px;
 border-color: black;
-}
-
-.CAEDesignation{
-	border-style: solid;
-border-width: 2px;
-width: 400px;
-height: 650px;
-margin: 20px;
-float:right;
-}
-
-
-input[id="navigationBarButton"]{
-	font-size: 12pt;
-	border-style: solid;
-	border-radius: 5px;
-	border-color: black;
-	border-width: 1px;
-	margin: 2px;
-	height: 30px;
-}
-
-h2[id="CAEDesignationHeader"]{
-	margin: 5px;
-	text-align: center;
-	padding: 0px;
-}
-
-p[id="instituteIDLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-
-p[id="userIDLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-
-p[id="adminTypeLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-select[id="selectAdminType"]{
-		margin: 5px 80px 5px 5px;
-	width: 200px;
-	padding: 0px;
-	float:right;
 }
 
 /*Testing 1,2,3 */
@@ -158,5 +80,6 @@ li.dropdown {
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
 
 /*End Testing */
