--- a/OldCss/viewCourseStyle.css
+++ b/OldCss/viewCourseStyle.css
@@ -2,40 +2,9 @@ body{
 background-color: #f4f5f7;
 }
 
-.GlobalAdminsHeader{
-	background-color: #bfefff;
-	color: #2b1459;
-width: 976px;
-text-align: center;
-}
-
-.viewAgreementHeader{
-	background-color: #bfefff;
-	color: #2b1459;
-width: 960px;
-text-align: center;
-font-size: 18pt;
-}
-
-
-.navigationBar{
-
-background-color: #858fa0;
-font-size: 18pt;
-border-style: solid;
-padding: 20px;
-margin: 20px;
-
-}
-#adminTable{
-	text-align: center;
-	color: #002056;
-border-width: 2px;
-border-color: red;
-}
 .container{
-width: 960px;
-height: 790px;
+width: 1110px;
+height: 1000px;
 margin-left: auto;
 margin-right: auto;
 background-color: #b3c1d6;
@@ -44,32 +13,47 @@ border-width: 2px;
 border-color: black;
 }
 
-.FromInstitute
-{
-    margin:30px 0px 30px 110px;
+.GlobalAdminsHeader{
+	background-color: #bfefff;
+	color: #2b1459;
+width: 1110px;
+text-align: center;
 }
 
-.ToInstitute
-{
-    margin: 30px 100px 30px 30px;
+.viewCoursesHeader{
+	background-color: #bfefff;
+	color: #2b1459;
+width: 1110px;
+text-align: center;
+font-size: 18pt;
 }
 
-#Continue
-{
-    margin: 20px;
+select[id="selectInstitution"]{
+	margin: 10px;
+	text-align: center;
+width: 400px;
+height: 300px;
+white-space: wrap;
+font-size: 20pt;
 }
 
-
-.vbp_InstituteA
-{
-   float:left;
-    margin:0px 0px 0px 300px;
+.courseListDiv{
+border-style: solid;
+border-width: 2px;
+width: 470px;
+height: 700px;
+margin: 20px;
+float:left;
 }
 
-.vbp_InstituteB
-{
-    float:right;
-    margin:0px 300px 0px 0px;
+.courseInfo{
+border-style: solid;
+border-width: 2px;
+width: 550px;
+height: 700px;
+margin: 20px;
+float:right;
+
 }
 
 /*Testing 1,2,3 */
@@ -124,6 +108,4 @@ li.dropdown {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
-
 /*End Testing */
