--- a/OldCss/viewInstitutionsStyle.css
+++ b/OldCss/viewInstitutionsStyle.css
@@ -9,33 +9,35 @@ width: 976px;
 text-align: center;
 }
 
-.viewAgreementHeader{
+.viewInstitutionHeader{
 	background-color: #bfefff;
 	color: #2b1459;
-width: 960px;
+width: 976px;
 text-align: center;
 font-size: 18pt;
 }
 
-
-.navigationBar{
-
-background-color: #858fa0;
-font-size: 18pt;
+.viewInstitutionsMultilineSelect{
 border-style: solid;
-padding: 20px;
-margin: 20px;
-
-}
-#adminTable{
-	text-align: center;
-	color: #002056;
 border-width: 2px;
-border-color: red;
+width: 470px;
+height: 500px;
+margin: 20px;
+float:left;
 }
+
+select[id="vi_selectInstitution"]{
+	margin: 10px;
+	text-align: center;
+width: 440px;
+height: 430px;
+white-space: wrap;
+font-size: 20pt;
+}
+
 .container{
-width: 1200px;
-height: 1300px;
+width: 976px;
+height: 1000px;
 margin-left: auto;
 margin-right: auto;
 background-color: #b3c1d6;
@@ -44,33 +46,15 @@ border-width: 2px;
 border-color: black;
 }
 
-.FromInstitute
-{
-    margin:30px 0px 30px 110px;
+.AdvancedOptions{
+	border-style: solid;
+border-width: 2px;
+width: 400px;
+height: 500px;
+margin: 20px;
+float:right;
 }
 
-.ToInstitute
-{
-    margin: 30px 100px 30px 30px;
-}
-
-#Continue
-{
-    margin: 20px;
-}
-
-
-.vbp_InstituteA
-{
-   float:left;
-    margin:0px 0px 0px 300px;
-}
-
-.vbp_InstituteB
-{
-    float:right;
-    margin:0px 300px 0px 0px;
-}
 
 /*Testing 1,2,3 */
 
@@ -124,6 +108,4 @@ li.dropdown {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
-
 /*End Testing */
