--- a/InstitutionAdmin/IA_editYourInstitutionUsers.css
+++ b/InstitutionAdmin/IA_editYourInstitutionUsers.css
@@ -63,7 +63,7 @@ border-style: solid;
 border-width: 2px;
 border-color: black;
 }
-.viewUserHeader{
+.IA_editYourInstitutionUserContainer .viewUserHeader{
 	background-color: #bfefff;
 	color: #2b1459;
 width: 974px;
@@ -71,7 +71,7 @@ text-align: center;
 font-size: 18pt;
 }
 
-.addUserForm{
+.IA_editYourInstitutionUserContainer .addUserForm{
 	align-content:  right;
 	width: 450px;
     height: 250px;
@@ -84,7 +84,7 @@ font-size: 18pt;
 	border-width: 1px;
 	border-radius: 10px;
 }
-input[id="addUserInput"]{
+.IA_editYourInstitutionUserContainer input[id="addUserInput"]{
 display: inline-block;
 		font-size: 10pt;
 	padding: 3px 10px;
@@ -99,7 +99,7 @@ display: inline-block;
 }
 
 /* Institution   */
-.institute_addUser{
+.IA_editYourInstitutionUserContainer .institute_addUser{
 	background-color: #858fa0;
 	width: 400px;
 	height: 250px;
@@ -112,57 +112,35 @@ display: inline-block;
 	margin: 20px 15px 0px 2px;
 
 }
-input[class="commonTxtBox2CSS"]{
-    display: block;
-		font-size: 10pt;
-	padding: 3px 10px;
-	border-width: 2px;
-	border-style: solid;
-	border-color: black;
-	border-radius: 4px;
-	box-sizing: border-box;
-	margin: auto;
-	width: 300px;
-	height: 43px;
-}
-select[class="commonCmbBox3CSS"]{
-    margin: 0px 0px 0px 35px;
-	padding: 0px;
-    text-align: center;
-    width: 300px;
-    height: 40px;
-    border-radius: 5px;
-    font-size: 18pt;
-    border-width: 1px; 
-    font-size: 15px;
-}
-textarea{
+
+.IA_editYourInstitutionUserContainer textarea{
     border: 2px solid black;
     border-radius: 5px;
 }
 
+/*End of Institution div in Edit Your Institution User*/
 /* Start Div Save or Cancel Button */
 
-div[id="saveOrCancelButtons"]{
+.IA_editYourInstitutionUserContainer div[id="saveOrCancelButtons"]{
 	width:900px;
 	height: 50px;
 	float: right;
 }
 
-form[class="saveChangesToUserName"]{
+.IA_editYourInstitutionUserContainer form[class="saveChangesToUserName"]{
 	text-align: center;
 	width: 160px;
 	margin: 0px 0px 0px 260px; 
 	float: left;
 }
-form[class="cancelChangesToUserName"]{
+.IA_editYourInstitutionUserContainer form[class="cancelChangesToUserName"]{
 	text-align: center;
 	width: 160px;
 	margin: 0px 300px 0px 00px; 
 	float: right;
 }
 
-input[class="commonBtn2InViewPrograms"]{
+.IA_editYourInstitutionUserContainer input[class="commonBtn2InViewPrograms"]{
      font-size: 15px;
 	border-style: solid;
 	border-width: 1px;
