--- a/InstitutionAdmin/IA_selectedPrograms.css
+++ b/InstitutionAdmin/IA_selectedPrograms.css
@@ -64,7 +64,7 @@ border-style: solid;
 border-width: 2px;
 border-color: black;
 }
-.viewUserHeader{
+.IA_selectProgramContainer .selecteProgramHeader{
 	background-color: #bfefff;
 	color: #2b1459;
 width: 974px;
@@ -72,7 +72,7 @@ text-align: center;
 font-size: 18pt;
 }
 
-div[class="programInfoInSelectProgram"]{
+.IA_selectProgramContainer div[class="programInfoInSelectProgram"]{
     align-content:  right;
 	width: 900px;
     height: 260px;
@@ -86,11 +86,11 @@ div[class="programInfoInSelectProgram"]{
 	border-radius: 10px;
 }
 
-h4[class="programInformationHeader"]{
+.IA_selectProgramContainer h4[class="programInformationHeader"]{
     margin:0px;
     text-align: center;
 }
-input[class="commonTxtBoxCSS"]{
+.IA_selectProgramContainer input[class="commonTxtBoxCSS"]{
     display: inline-block;
 		font-size: 10pt;
 	padding: 3px 10px;
@@ -103,7 +103,7 @@ input[class="commonTxtBoxCSS"]{
 	width: 200px;
 	height: 43px;
 }
-select[class="commonCmbBoxCSS"]{
+.IA_selectProgramContainer select[class="commonCmbBoxCSS"]{
     margin: 0px 0px 0px 5px;
 	padding: 0px;
     text-align: center;
@@ -114,11 +114,8 @@ select[class="commonCmbBoxCSS"]{
     border-color: black;
     margin: 2px;
 }
-p[class="programURL"]{
-    margin: 0px;
-    text-align: center;
-}
-input[class="commonTxtBox3CSS"]{
+
+.IA_selectProgramContainer input[class="commonTxtBox3CSS"]{
     display: block;
 		font-size: 10pt;
 	padding: 3px 10px;
@@ -132,32 +129,7 @@ input[class="commonTxtBox3CSS"]{
 	height: 43px;
 }
 
-
-/* Start div in mappingPrograms_SelectProgram */
-div[class="mappingProgramsDiv"]{
-    align-content:  right;
-	width: 420px;
-    height: 530px;
-	background-color: #858fa0;
-	padding: 10px;
-	float: right;
-	margin: 20px 20px 20px 5px;
-	border-style: solid;
-	border-color: black;
-	border-width: 1px;
-	border-radius: 10px;
-}
-
-h4[id="mappingProgramHeader"]{
-    text-align: center;
-    margin: 0px;
-   
-}
-
-/* Start div in Sub mapping Programs_SelectProgram */
-
-
-div[id="generalEduInSelectProgram"]{
+.IA_selectProgramContainer div[id="generalEduInSelectProgram"]{
      align-content:  right;
 	width: 420px;
     height: 270px;
@@ -170,7 +142,7 @@ div[id="generalEduInSelectProgram"]{
 	border-width: 1px;
 	border-radius: 10px;
 }
-select[class="selectProgramDropDown1"]{
+.IA_selectProgramContainer select[class="selectProgramDropDown1"]{
     width: 400px;
     height: 150px;
     float: left;
@@ -179,128 +151,15 @@ select[class="selectProgramDropDown1"]{
     border-color:black;
     border-radius: 5px;
 }
-form[class="frmViewTranserInfoInSelectProgram"]{
-    display: block;
-    margin: auto;
-    width: 190px;
-    height: 40px;
-    float:left;
-}
-input[class="commonBtnInMappingPrograms"]{
-    font-size: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 10px;
-    width: 180px;
-    height: 30px;
-    margin: 5px;
-}
-form[class="frmRemoveProgramInSelectProgram"]{
-    display: block;
-    margin: auto;
-    width: 190px;
-    height: 40px;
-    float:left;
-}
-input[class="btnAddTransferInformationInSelectedProgram"]{
-    font-size: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 5px;
-    width: 100px;
-    height: 23px;
-    margin: 5px;
-}
-/* End div in mappingPrograms_SelectProgram */
-
-#mappingSubDivInSelectProgram.divMappingSub{
-    
-    width:420px;
-    height: 270px;
-    border-color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 5px;
-}
-
-#mappingSubDivInAddProgram.divMappingSub{
-    width:420px;
-    height: 250px;
-    border-color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 5px;
-}
-h4.mappingSubHeader{
-    text-align: center;
-    margin: 5px 0;
-}
-select[class="selectInstituteDropDownInSubMapping_selectProgram"]{
-    text-align: center;
-	float:left;
-width: 380px;
-border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-font-size: 15pt;
-    margin: 5px;
-}
-select[class="selectProgramDropDownInSubMapping_selectProgram"]{
-    text-align: center;
-	float:left;
-width: 380px;
-border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-font-size: 15pt;
-    margin: 5px;
-}
-
-form[class="frmViewTranserInfoInAddProgram"]{
-    display: block;
-    margin: auto;
-    width: 190px;
-    height: 40px;
-    float:left;
-}
-form[class="frmRemoveProgramIn_AddProgram"]{
-    display: block;
-    margin: auto;
-    width: 190px;
-    height: 40px;
-    float:left;
-}
-select[class="selectInstituteDropDownInSubMapping_AddProgram"]{
-    text-align: center;
-	float:left;
-width: 380px;
-border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-font-size: 15pt;
-    margin: 5px;
-}
-select[class="selectProgramDropDownInSubMapping_AddProgram"]{
-    text-align: center;
-	float:left;
-width: 380px;
-border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-font-size: 15pt;
-    margin: 5px;
-}
 /* Start Career Course Div */
 
-h4[class="careerCourseHeader"]{
+.IA_selectProgramContainer h4[class="careerCourseHeader"]{
     text-align: center;
     margin: 0px;
 }
 
 
-div[id="CareerCoursesDiv"]{
+.IA_selectProgramContainer div[id="CareerCoursesDiv"]{
     
    	width: 450px;
     height: 270px;
@@ -314,14 +173,7 @@ div[id="CareerCoursesDiv"]{
 	border-radius: 10px;
 }
 
-div[id="CareerCourseSubDiv"]{
-    margin: 25px 5px 10px 5px;
-    width: 400px;
-    height: 110px;
-}
-
-
-textarea[class="textarea1InAddProgram"]{
+.IA_selectProgramContainer textarea[class="textarea1InAddProgram"]{
   width:380px;
     height: 80px;
     border-width: 1px;
@@ -329,69 +181,13 @@ textarea[class="textarea1InAddProgram"]{
 	border-radius: 5px;
     margin: 5px;
 }
-input[class="commonBtnInCareerCourses"]{
-    font-size: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 10px;
-    width: 120px;
-    height: 30px;
-    margin: 5px;
-    float: left;
-}
-
-div[id="CareerCourseSubDiv"]{
-    margin: 25px 5px 10px 5px;
-    width: 400px;
-    height: 110px;
-}
-
-select[class="commonCmbBox3CSS"]{
-    margin: 0px 0px 0px 5px;
-	padding: 0px;
-    text-align: center;
-    width: 300px;
-    border-radius: 5px;
-    font-size: 18pt;
-    border-width: 1px; 
-}
-
 
 /* End Career Course Div */
 
-h4[class="genEdReqHeader"]{
+/* Start General education div */
+.IA_selectProgramContainer h4[class="genEdReqHeader"]{
     text-align: center;
     margin: 0px;
 }
 
-
-/*  Start Save and cancel buttons */
-div[id="saveOrCancelButtons"]{
-	width:900px;
-	height: 50px;
-	float: right;
-}
-form[class="saveChangesToUserName"]{
-	text-align: center;
-	width: 160px;
-	margin: 0px 0px 0px 260px; 
-	float: left;
-}
-form[class="cancelChangesToUserName"]{
-	text-align: center;
-	width: 160px;
-	margin: 0px 300px 0px 00px; 
-	float: right;
-}
-
-input[class="commonBtn2InViewPrograms"]{
-     font-size: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 10px;
-    width: 150px;
-    height: 30px;
-    margin: 5px;
-}
+/* End General education div */
