--- a/InstitutionAdmin/IA_viewUsers.css
+++ b/InstitutionAdmin/IA_viewUsers.css
@@ -72,7 +72,7 @@ border-width: 2px;
 border-color: black;
     display: block;
 }
-.viewUserHeader{
+.IA_viewUserContainer .viewUserHeader{
 	background-color: #bfefff;
 	color: #2b1459;
 width: 974px;
@@ -80,7 +80,7 @@ text-align: center;
 font-size: 18pt;
 }
 /* This is div viewUserMultiLineSelect for viewUsers page */
-.viewUsersMultilineSelect{
+.IA_viewUserContainer .viewUsersMultilineSelect{
     background-color: #858fa0;
 border-style: solid;
 border-width: 1px;
@@ -91,7 +91,7 @@ margin: 20px;
 float:left;
 }
 
-select[id="lstBoxselectUserInViewUser"]{
+.IA_viewUserContainer select[id="lstBoxselectUserInViewUser"]{
 	margin: 10px;
 	text-align: center;
     width: 400px;
@@ -103,24 +103,24 @@ select[id="lstBoxselectUserInViewUser"]{
     border-color: black;
 }
 
-form[id="selectUserButtonForm"]{
+.IA_viewUserContainer form[id="selectUserButtonForm"]{
 	width: 120px;
 	float: left;
 	margin: 0px 5px 0px 20px;
 }
-input[id="selectUserButton"]{
+.IA_viewUserContainer input[id="selectUserButton"]{
 	font-size: 20px;
 	border-style: solid;
 	border-width: 1px;
 	border-color: black;
 	border-radius: 5px;
 }
-form[id="addUserButtonForm"]{
+.IA_viewUserContainer form[id="addUserButtonForm"]{
 	width: 100px;
 	float: left;
     margin: 0px 12px 0px 12px;
 }
-input[id="addUserButton"]{
+.IA_viewUserContainer input[id="addUserButton"]{
 	font-size: 20px;
    /* margin: 0px 10px 0px 20px;*/
 	border-style: solid;
@@ -128,13 +128,12 @@ input[id="addUserButton"]{
 	border-color: black;
 	border-radius: 5px;
 }
-form[id="removeUserButtonForm"]{
+.IA_viewUserContainer form[id="removeUserButtonForm"]{
 	width: 120px;
 	float: left;
 }
-input[id="removeUserButton"]{
+.IA_viewUserContainer input[id="removeUserButton"]{
 	font-size: 20px;
-
 	border-style: solid;
 	border-width: 1px;
 	border-color: black;
@@ -146,17 +145,22 @@ input[id="removeUserButton"]{
 
 /* This is for Div filterBy in viewUserPage*/
 
-div[class="filterByInViewUsers"]{
+.IA_viewUserContainer div[class="filterByInViewUsers"]{
     background-color: #858fa0; 
 	border-style: solid;
-border-width: 1px;
-border-radius: 10px;
-width: 450px;
-height: 400px;
-margin: 20px 10px 20px 0px;
-float:right;
+    border-width: 1px;
+    border-radius: 10px;
+    width: 450px;
+    height: 400px;
+    margin: 20px 10px 20px 0px;
+    float:right;
 }
-#instituteLabelInFilterBy{
+.IA_viewUserContainer h2[id="filterByHeader"]{
+	margin: 5px;
+	text-align: center;
+	padding: 0px;
+}
+.IA_viewUserContainer #instituteLabelInFilterBy{
 	float:left;
 	text-align: center;
 	font-size: 20px;
@@ -165,8 +169,7 @@ float:right;
 	width: 80px;
 	margin: 5px 5px 0px 35px;
 }
-
-p[id="instituteIDLabelInFilterBy"]{
+.IA_viewUserContainer p[id="instituteIDLabelInFilterBy"]{
 	float:left;
 	text-align: center;
 	font-size: 20px;
@@ -175,7 +178,10 @@ p[id="instituteIDLabelInFilterBy"]{
 	width: 100px;
 	margin: 15px 5px 10px 15px;
 }
-input[class="InstituteIdFilterTextBoxInFilterBy"]{
+
+
+
+.IA_viewUserContainer input[class="InstituteIdFilterTextBoxInFilterBy"]{
 	width: 250px;
 	height: 35px;
     border-width: 1px;
@@ -187,16 +193,7 @@ input[class="InstituteIdFilterTextBoxInFilterBy"]{
     padding: 5px 7px;
 }
 
-input[id="applyFilterButtonInFilterBy"]{
-    font-size: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 5px;
-    margin: 5px;
-    padding: 3px;
-}
-p[class="adminTypeLabelInFilterBy"]{
+.IA_viewUserContainer p[class="adminTypeLabelInFilterBy"]{
 	margin: 10px 05px 5px 0px;
 	width: 115px;
 	padding: 0px;
@@ -204,7 +201,27 @@ p[class="adminTypeLabelInFilterBy"]{
     font-size: 20px;
 }
 
-p[id="UserIDLabelInFilterBy"]{
+.IA_viewUserContainer select[class="commonCmbBox2CSS"]{
+    margin: 0px 0px 0px 5px;
+	padding: 0px;
+    text-align: center;
+    width: 250px;
+    border-radius: 5px;
+    font-size: 20pt;
+    border-width:1px; 
+}
+.IA_viewUserContainer input[class="commonBtnInViewPrograms"]{
+     font-size: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 10px;
+    width: 120px;
+    height: 30px;
+    margin: 5px;
+}
+
+.IA_viewUserContainer p[id="UserIDLabelInFilterBy"]{
 	margin: 15px 5px 15px 40px;
 	width: 70px;
 	padding: 0px;
@@ -212,7 +229,7 @@ p[id="UserIDLabelInFilterBy"]{
     font-size: 20px;
 }
 
-input[class="selectUserTextBoxInFilterBy"]{
+.IA_viewUserContainer input[class="selectUserTextBoxInFilterBy"]{
    	width: 250px;
 	height: 35px;
     border-width: 1px;
@@ -224,38 +241,5 @@ input[class="selectUserTextBoxInFilterBy"]{
     padding: 5px 7px;
     
 }
-input[id="searchButtonInFilterBy"]{
-    font-size: 20px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 10px;
-    width: 80px;
-    margin: 2px 2px 2px 150px; 
-}
-/* This is end of div filterBy in view User*/
 
-h2[id="filterByHeader"]{
-	margin: 5px;
-	text-align: center;
-	padding: 0px;
-}
-select[class="commonCmbBox2CSS"]{
-    margin: 0px 0px 0px 5px;
-	padding: 0px;
-    text-align: center;
-    width: 250px;
-    border-radius: 5px;
-    font-size: 20pt;
-    border-width:1px; 
-}
-input[class="commonBtnInViewPrograms"]{
-     font-size: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 10px;
-    width: 120px;
-    height: 30px;
-    margin: 5px;
-}
+/* This is end of div filterBy in view User*/
