--- a/addPrograms.css
+++ b/addPrograms.css
@@ -64,7 +64,7 @@ border-style: solid;
 border-width: 2px;
 border-color: black;
 }
-.viewUserHeader{
+.addProgramContainer .addProgramHeader{
 	background-color: #bfefff;
 	color: #2b1459;
 width: 974px;
@@ -72,7 +72,7 @@ text-align: center;
 font-size: 18pt;
 }
 
-div[class="programInfoInSelectProgram"]{
+.addProgramContainer div[class="programInfoInAddProgram"]{
     align-content:  right;
 	width: 900px;
     height: 260px;
@@ -86,11 +86,11 @@ div[class="programInfoInSelectProgram"]{
 	border-radius: 10px;
 }
 
-h4[class="programInformationHeader"]{
+.addProgramContainer h4[class="programInformationHeader"]{
     margin:0px;
     text-align: center;
 }
-input[class="commonTxtBoxCSS"]{
+.addProgramContainer input[class="commonTxtBoxCSS"]{
     display: inline-block;
 		font-size: 10pt;
 	padding: 3px 10px;
@@ -103,7 +103,7 @@ input[class="commonTxtBoxCSS"]{
 	width: 200px;
 	height: 43px;
 }
-select[class="commonCmbBoxCSS"]{
+.addProgramContainer select[class="commonCmbBoxCSS"]{
     margin: 0px 0px 0px 5px;
 	padding: 0px;
     text-align: center;
@@ -114,11 +114,8 @@ select[class="commonCmbBoxCSS"]{
     border-color: black;
     margin: 2px;
 }
-p[class="programURL"]{
-    margin: 0px;
-    text-align: center;
-}
-input[class="commonTxtBox3CSS"]{
+
+.addProgramContainer input[class="commonTxtBox3CSS"]{
     display: block;
 		font-size: 10pt;
 	padding: 3px 10px;
@@ -133,31 +130,8 @@ input[class="commonTxtBox3CSS"]{
 }
 
 
-/* Start div in mappingPrograms_SelectProgram */
-div[class="mappingProgramsDiv"]{
-    align-content:  right;
-	width: 420px;
-    height: 530px;
-	background-color: #858fa0;
-	padding: 10px;
-	float: right;
-	margin: 20px 20px 20px 5px;
-	border-style: solid;
-	border-color: black;
-	border-width: 1px;
-	border-radius: 10px;
-}
 
-h4[id="mappingProgramHeader"]{
-    text-align: center;
-    margin: 0px;
-   
-}
-
-/* Start div in Sub mapping Programs_SelectProgram */
-
-
-div[id="generalEduInSelectProgram"]{
+.addProgramContainer div[id="generalEduInSelectProgram"]{
      align-content:  right;
 	width: 420px;
     height: 420px;
@@ -170,7 +144,7 @@ div[id="generalEduInSelectProgram"]{
 	border-width: 1px;
 	border-radius: 10px;
 }
-select[class="selectProgramDropDown1"]{
+.addProgramContainer select[class="selectProgramDropDown1"]{
     width: 400px;
     height: 150px;
     float: left;
@@ -179,130 +153,12 @@ select[class="selectProgramDropDown1"]{
     border-color:black;
     border-radius: 5px;
 }
-form[class="frmViewTranserInfoInSelectProgram"]{
-    display: block;
-    margin: auto;
-    width: 190px;
-    height: 40px;
-    float:left;
-}
-input[class="commonBtnInMappingPrograms"]{
-    font-size: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 10px;
-    width: 180px;
-    height: 30px;
-    margin: 5px;
-}
-form[class="frmRemoveProgramInSelectProgram"]{
-    display: block;
-    margin: auto;
-    width: 190px;
-    height: 40px;
-    float:left;
-}
-input[class="btnAddTransferInformationInSelectedProgram"]{
-    font-size: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 5px;
-    width: 100px;
-    height: 23px;
-    margin: 5px;
-}
-/* End div in mappingPrograms_SelectProgram */
-
-#mappingSubDivInSelectProgram.divMappingSub{
-    
-    width:420px;
-    height: 270px;
-    border-color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 5px;
-}
-
-#mappingSubDivInAddProgram.divMappingSub{
-    width:420px;
-    height: 250px;
-    border-color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 5px;
-}
-h4.mappingSubHeader{
-    text-align: center;
-    margin: 5px 0;
-}
-select[class="selectInstituteDropDownInSubMapping_selectProgram"]{
-    text-align: center;
-	float:left;
-width: 380px;
-border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-font-size: 15pt;
-    margin: 5px;
-}
-select[class="selectProgramDropDownInSubMapping_selectProgram"]{
-    text-align: center;
-	float:left;
-width: 380px;
-border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-font-size: 15pt;
-    margin: 5px;
-}
-
-form[class="frmViewTranserInfoInAddProgram"]{
-    display: block;
-    margin: auto;
-    width: 190px;
-    height: 40px;
-    float:left;
-}
-form[class="frmRemoveProgramIn_AddProgram"]{
-    display: block;
-    margin: auto;
-    width: 190px;
-    height: 40px;
-    float:left;
-}
-select[class="selectInstituteDropDownInSubMapping_AddProgram"]{
-    text-align: center;
-	float:left;
-width: 380px;
-border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-font-size: 15pt;
-    margin: 5px;
-}
-select[class="selectProgramDropDownInSubMapping_AddProgram"]{
-    text-align: center;
-	float:left;
-width: 380px;
-border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-font-size: 15pt;
-    margin: 5px;
-}
 /* Start Career Course Div */
 
-h4[class="careerCourseHeader"]{
-    text-align: center;
-    margin: 0px;
-}
 
 
-div[id="CareerCoursesDiv"]{
-    
-   	width: 450px;
+.addProgramContainer div[id="CareerCoursesDiv"]{
+    width: 450px;
     height: 420px;
 	background-color: #858fa0;
 	padding: 10px;
@@ -313,15 +169,19 @@ div[id="CareerCoursesDiv"]{
 	border-width: 1px;
 	border-radius: 10px;
 }
+.addProgramContainer h4[class="careerCourseHeader"]{
+    text-align: center;
+    margin: 0px;
+}
 
-div[id="CareerCourseSubDiv"]{
+.addProgramContainer div[id="CareerCourseSubDiv"]{
     margin: 25px 5px 10px 5px;
     width: 400px;
     height: 110px;
 }
 
 
-textarea[class="textarea1InAddProgram"]{
+.addProgramContainer textarea[class="textarea1InAddProgram"]{
   width:380px;
     height: 80px;
     border-width: 1px;
@@ -329,7 +189,7 @@ textarea[class="textarea1InAddProgram"]{
 	border-radius: 5px;
     margin: 5px;
 }
-input[class="commonBtnInCareerCourses"]{
+.addProgramContainer input[class="commonBtnInCareerCourses"]{
     font-size: 15px;
 	border-style: solid;
 	border-width: 1px;
@@ -341,13 +201,13 @@ input[class="commonBtnInCareerCourses"]{
     float: left;
 }
 
-div[id="CareerCourseSubDiv"]{
+.addProgramContainer div[id="CareerCourseSubDiv"]{
     margin: 25px 5px 10px 5px;
     width: 400px;
     height: 110px;
 }
 
-select[class="commonCmbBox3CSS"]{
+.addProgramContainer select[class="commonCmbBox3CSS"]{
     margin: 0px 0px 0px 5px;
 	padding: 0px;
     text-align: center;
@@ -360,32 +220,32 @@ select[class="commonCmbBox3CSS"]{
 
 /* End Career Course Div */
 
-h4[class="genEdReqHeader"]{
+.addProgramContainer h4[class="genEdReqHeader"]{
     text-align: center;
     margin: 0px;
 }
 
 
 /*  Start Save and cancel buttons */
-div[id="saveOrCancelButtons"]{
+.addProgramContainer div[id="saveOrCancelButtons"]{
 	width:900px;
 	height: 50px;
 	float: right;
 }
-form[class="saveChangesToUserName"]{
+.addProgramContainer form[class="saveChangesToUserName"]{
 	text-align: center;
 	width: 160px;
 	margin: 0px 0px 0px 260px; 
 	float: left;
 }
-form[class="cancelChangesToUserName"]{
+.addProgramContainer form[class="cancelChangesToUserName"]{
 	text-align: center;
 	width: 160px;
 	margin: 0px 300px 0px 00px; 
 	float: right;
 }
 
-input[class="commonBtn2InViewPrograms"]{
+.addProgramContainer input[class="commonBtn2InViewPrograms"]{
      font-size: 15px;
 	border-style: solid;
 	border-width: 1px;
