--- a/addUsers.css
+++ b/addUsers.css
@@ -63,15 +63,16 @@ border-style: solid;
 border-width: 2px;
 border-color: black;
 }
-.viewUserHeader{
+
+.addUserHeader{
 	background-color: #bfefff;
 	color: #2b1459;
-width: 974px;
-text-align: center;
-font-size: 18pt;
+    width: 974px;
+    text-align: center;
+    font-size: 18pt;
 }
 
-.addUserForm{
+.addUserContainer .addUserForm{
 	align-content:  right;
 	width: 450px;
     height: 330px;
@@ -84,9 +85,10 @@ font-size: 18pt;
 	border-width: 1px;
 	border-radius: 10px;
 }
-input[id="addUserInput"]{
-display: inline-block;
-		font-size: 10pt;
+
+.addUserContainer input[id="addUserInput"]{
+    display: inline-block;
+	font-size: 10pt;
 	padding: 3px 10px;
 	border-width: 2px;
 	border-style: solid;
@@ -99,7 +101,7 @@ display: inline-block;
 }
 
 /* Institution   */
-.institute_addUser{
+.addUserContainer .institute_addUser{
 	background-color: #858fa0;
 	width: 400px;
 	height: 325px;
@@ -112,7 +114,7 @@ display: inline-block;
 	margin: 20px 15px 0px 2px;
 
 }
-input[class="commonTxtBox2CSS"]{
+.addUserContainer input[class="commonTxtBox2CSS"]{
     display: block;
 		font-size: 10pt;
 	padding: 3px 10px;
@@ -125,7 +127,7 @@ input[class="commonTxtBox2CSS"]{
 	width: 300px;
 	height: 43px;
 }
-select[class="commonCmbBox3CSS"]{
+.addUserContainer select[class="commonCmbBox3CSS"]{
     margin: 0px 0px 0px 35px;
 	padding: 0px;
     text-align: center;
@@ -133,4 +135,22 @@ select[class="commonCmbBox3CSS"]{
     border-radius: 5px;
     font-size: 18pt;
     border-width: 1px; 
+}
+
+.addUserContainer input[class="addUserButton"]{
+	font-size: 20px;
+   /* margin: 0px 10px 0px 20px;*/
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 5px;
+}
+
+.addUserContainer input[class="btnCancel"]{
+	font-size: 20px;
+   /* margin: 0px 10px 0px 20px;*/
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 5px;
 }
