--- a/viewPrograms_selectProgram.css
+++ b/viewPrograms_selectProgram.css
@@ -64,7 +64,7 @@ border-style: solid;
 border-width: 2px;
 border-color: black;
 }
-.viewUserHeader{
+.selectedProgramContainer .selectedProgramHeader{
 	background-color: #bfefff;
 	color: #2b1459;
 width: 974px;
@@ -73,7 +73,7 @@ font-size: 18pt;
 }
 
 /* Start div in viewProgram_SelectProgram */
-div[class="programInfoInSelectProgram"]{
+.selectedProgramContainer div[class="programInfoInSelectProgram"]{
     align-content:  right;
 	width: 900px;
     height: 260px;
@@ -86,7 +86,7 @@ div[class="programInfoInSelectProgram"]{
 	border-width: 1px;
 	border-radius: 10px;
 }
-input[class="commonTxtBoxCSS"]{
+.selectedProgramContainer input[class="commonTxtBoxCSS"]{
     display: inline-block;
 		font-size: 10pt;
 	padding: 3px 10px;
@@ -99,20 +99,8 @@ input[class="commonTxtBoxCSS"]{
 	width: 200px;
 	height: 43px;
 }
-input[class="commonTxtBox2CSS"]{
-    display: block;
-		font-size: 10pt;
-	padding: 3px 10px;
-	border-width: 2px;
-	border-style: solid;
-	border-color: black;
-	border-radius: 4px;
-	box-sizing: border-box;
-	margin: auto;
-	width: 300px;
-	height: 43px;
-}
-input[class="commonTxtBox3CSS"]{
+
+.selectedProgramContainer input[class="commonTxtBox3CSS"]{
     display: block;
 		font-size: 10pt;
 	padding: 3px 10px;
@@ -126,7 +114,7 @@ input[class="commonTxtBox3CSS"]{
 	height: 43px;
 }
 
-select[class="commonCmbBoxCSS"]{
+.selectedProgramContainer select[class="commonCmbBoxCSS"]{
     margin: 0px 0px 0px 5px;
 	padding: 0px;
     text-align: center;
@@ -137,41 +125,20 @@ select[class="commonCmbBoxCSS"]{
     border-color: black;
     margin: 2px;
 }
-select[class="commonCmbBox2CSS"]{
-    margin: 0px 0px 0px 5px;
-	padding: 0px;
-    text-align: center;
-    width: 250px;
-    border-radius: 5px;
-    font-size: 20pt;
-    border-width:1px; 
-}
-select[class="commonCmbBox3CSS"]{
-    margin: 0px 0px 0px 5px;
-	padding: 0px;
-    text-align: center;
-    width: 300px;
-    border-radius: 5px;
-    font-size: 18pt;
-    border-width: 1px; 
-}
 
 
-h4[class="programInformationHeader"]{
+
+.selectedProgramContainer h4[class="programInformationHeader"]{
     margin:0px;
     text-align: center;
 }
 
-p[class="programURL_selectProgram"]{
-    margin: 0px;
-    text-align: center;
-}
+
 
 /* End div in viewProgram_SelectProgram  */
 /* Start Career Course Div */
-div[id="CareerCoursesDiv"]{
-    
-   	width: 450px;
+.selectedProgramContainer div[id="CareerCoursesDiv"]{
+    width: 450px;
     height: 420px;
 	background-color: #858fa0;
 	padding: 10px;
@@ -183,40 +150,28 @@ div[id="CareerCoursesDiv"]{
 	border-radius: 10px;
 }
 
-div[id="CareerCourseSubDiv"]{
-    margin: 25px 5px 10px 5px;
-    width: 400px;
-    height: 110px;
-}
+        /*Career Course Sub div*/
+        .selectedProgramContainer div[id="CareerCourseSubDiv"]{
+            margin: 25px 5px 10px 5px;
+            width: 400px;
+            height: 110px;
+        }
+
+        .selectedProgramContainer select[class="commonCmbBox3CSS"]{
+            margin: 0px 0px 0px 5px;
+            padding: 0px;
+            text-align: center;
+            width: 300px;
+            border-radius: 5px;
+            font-size: 18pt;
+            border-width: 1px; 
+        }
+        /*End of Career Course Sub Div*/
 
 /* End Career Course Div */
 
 
-/* Start div in mappingPrograms_SelectProgram */
-div[class="mappingProgramsDiv"]{
-    align-content:  right;
-	width: 420px;
-    height: 530px;
-	background-color: #858fa0;
-	padding: 10px;
-	float: right;
-	margin: 20px 20px 20px 5px;
-	border-style: solid;
-	border-color: black;
-	border-width: 1px;
-	border-radius: 10px;
-}
-
-h4[id="mappingProgramHeader"]{
-    text-align: center;
-    margin: 0px;
-   
-}
-
-/* Start div in Sub mapping Programs_SelectProgram */
-
-
-div[id="generalEduInSelectProgram"]{
+.selectedProgramContainer div[id="generalEduInSelectProgram"]{
      align-content:  right;
 	width: 420px;
     height: 420px;
@@ -229,7 +184,7 @@ div[id="generalEduInSelectProgram"]{
 	border-width: 1px;
 	border-radius: 10px;
 }
-select[class="selectProgramDropDown1"]{
+.selectedProgramContainer select[class="selectProgramDropDown1"]{
     width: 400px;
     height: 150px;
     float: left;
@@ -238,93 +193,15 @@ select[class="selectProgramDropDown1"]{
     border-color:black;
     border-radius: 5px;
 }
-form[class="frmViewTranserInfoInSelectProgram"]{
-    display: block;
-    margin: auto;
-    width: 190px;
-    height: 40px;
-    float:left;
-}
-input[class="commonBtnInMappingPrograms"]{
-    font-size: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 10px;
-    width: 180px;
-    height: 30px;
-    margin: 5px;
-}
-form[class="frmRemoveProgramInSelectProgram"]{
-    display: block;
-    margin: auto;
-    width: 190px;
-    height: 40px;
-    float:left;
-}
-input[class="btnAddTransferInformationInSelectedProgram"]{
-    font-size: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	border-radius: 5px;
-    width: 100px;
-    height: 23px;
-    margin: 5px;
-}
-/* End div in mappingPrograms_SelectProgram */
-
-#mappingSubDivInSelectProgram.divMappingSub{
-    
-    width:420px;
-    height: 270px;
-    border-color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 5px;
-}
-
-#mappingSubDivInAddProgram.divMappingSub{
-    width:420px;
-    height: 250px;
-    border-color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 5px;
-}
-h4.mappingSubHeader{
-    text-align: center;
-    margin: 5px 0;
-}
-select[class="selectInstituteDropDownInSubMapping_selectProgram"]{
-    text-align: center;
-	float:left;
-width: 380px;
-border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-font-size: 15pt;
-    margin: 5px;
-}
-select[class="selectProgramDropDownInSubMapping_selectProgram"]{
-    text-align: center;
-	float:left;
-width: 380px;
-border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-font-size: 15pt;
-    margin: 5px;
-}
 
 /* Career Course */
 
-h4[class="careerCourseHeader"]{
+.selectedProgramContainer h4[class="careerCourseHeader"]{
     text-align: center;
     margin: 0px;
 }
 
-textarea[class="textarea1InSelectProgram"]{
+.selectedProgramContainer textarea[class="textarea1InSelectProgram"]{
     width:380px;
     height: 80px;
     border-width: 1px;
@@ -332,7 +209,7 @@ textarea[class="textarea1InSelectProgram"]{
 	border-radius: 5px;
     margin: 5px;
 }
-input[class="commonBtnInCareerCourses"]{
+.selectedProgramContainer input[class="commonBtnInCareerCourses"]{
     font-size: 15px;
 	border-style: solid;
 	border-width: 1px;
@@ -347,7 +224,7 @@ input[class="commonBtnInCareerCourses"]{
 
 /*General Education*/
 
-h4[class="genEdReqHeader"]{
+.selectedProgramContainer h4[class="genEdReqHeader"]{
     text-align: center;
     margin: 0px;
 }
@@ -356,19 +233,19 @@ h4[class="genEdReqHeader"]{
 
 /* Save or Cancel button*/
 
-div[id="saveOrCancelButtons"]{
+.selectedProgramContainer div[id="saveOrCancelButtons"]{
 	width:900px;
 	height: 50px;
 	float: right;
 }
-form[class="saveChangesToUserName"]{
+.selectedProgramContainer form[class="saveChangesToUserName"]{
 	text-align: center;
 	width: 160px;
 	margin: 0px 0px 0px 260px; 
 	float: left;
 }
 
-input[class="commonBtn2InViewPrograms"]{
+.selectedProgramContainer input[class="commonBtn2InViewPrograms"]{
      font-size: 15px;
 	border-style: solid;
 	border-width: 1px;
@@ -378,7 +255,7 @@ input[class="commonBtn2InViewPrograms"]{
     height: 30px;
     margin: 5px;
 }
-form[class="cancelChangesToUserName"]{
+.selectedProgramContainer form[class="cancelChangesToUserName"]{
 	text-align: center;
 	width: 160px;
 	margin: 0px 300px 0px 00px; 
