--- a/viewUsers_selectUser.css
+++ b/viewUsers_selectUser.css
@@ -64,7 +64,7 @@ border-width: 2px;
 border-color: black;
 }
 
-.viewUserHeader{
+.selectedUserContainer .selectedUserHeader{
 	background-color: #bfefff;
 	color: #2b1459;
 width: 974px;
@@ -74,7 +74,7 @@ font-size: 18pt;
 
 /*  start div addUserForm left in viewUser_SelectUser */
 
-.selectUserForm{
+.selectedUserContainer .selectUserForm{
 	align-content:  right;
 	width: 450px;
     height: 280px;
@@ -90,7 +90,7 @@ font-size: 18pt;
 
 /*  start div addUserForm right in viewUser_SelectUser */
 
-.institute_selectUser{
+.selectedUserContainer .institute_selectUser{
 	background-color: #858fa0;
 	width: 400px;
 	height: 280px;
@@ -103,19 +103,19 @@ font-size: 18pt;
 	margin: 20px 15px 0px 2px;
 
 }
-div[class="chooseInstituteBox"]{
+.selectedUserContainer div[class="chooseInstituteBox"]{
 	width: 410px;
 	height: 200px;
 }
 
-p[id="instituteLabelInviewUser_selectUser"]{
+.selectedUserContainer p[id="instituteLabelInviewUser_selectUser"]{
     width:70px;
     height: 15px;
     float:left;
     margin: 8px 25px 8px 10px;
     font-size: 20px;
 }
-select[class="selectInstituteDropDownInviewUser_selectUser"]
+.selectedUserContainer select[class="selectInstituteDropDownInviewUser_selectUser"]
 {
 	text-align: center;
 	float:left;
@@ -126,7 +126,7 @@ border-radius: 5px;
 font-size: 20pt;
 }
 
-p[id="positionLabelInInstitutionBox"]{
+.selectedUserContainer p[id="positionLabelInInstitutionBox"]{
 	text-align: center;
 	font-size: 20px;
 	padding: 0px;
@@ -135,7 +135,7 @@ p[id="positionLabelInInstitutionBox"]{
 	float:left;
 	margin: 25px 0px 0px 30px; 
 }
-input[id="addUserPosition"]{
+.selectedUserContainer input[id="addUserPosition"]{
 	display: inline-block;
 		font-size: 10pt;
 	padding: 6px 10px;
@@ -150,7 +150,7 @@ input[id="addUserPosition"]{
 	margin: 15px 2px 2px 5px;
 }
 
-p[id="linkLabelInInstitutionBox"]{
+.selectedUserContainer p[id="linkLabelInInstitutionBox"]{
 	text-align: center;
 	font-size: 20px;
 	padding: 0px;
@@ -160,7 +160,7 @@ p[id="linkLabelInInstitutionBox"]{
 	margin: 30px 10px 0px 45px;
 }
 
-input[id="addUserInfoLink"]{
+.selectedUserContainer input[id="addUserInfoLink"]{
 	display: inline-block;
 		font-size: 10pt;
 	padding: 6px 10px;
@@ -177,9 +177,9 @@ input[id="addUserInfoLink"]{
 
 /*  end div addUserForm right in viewUser_SelectUser */
 
-input[id="addUserInput"]{
-display: inline-block;
-		font-size: 10pt;
+.selectedUserContainer input[id="addUserInput"]{
+    display: inline-block;
+    font-size: 10pt;
 	padding: 3px 10px;
 	border-width: 2px;
 	border-style: solid;
@@ -190,7 +190,7 @@ display: inline-block;
 	width: 200px;
 	height: 43px;
 }
-select[id="cmbselectAdminTypeInSelectUser"]{
+.selectedUserContainer select[id="cmbselectAdminTypeInSelectUser"]{
     margin: 0px 5px 0px 5px;
 	padding: 0px;
     text-align: center;
@@ -201,18 +201,18 @@ select[id="cmbselectAdminTypeInSelectUser"]{
     font-size: 20pt;
     border-width:2px;
 }
-div[id="saveOrCancelButtons"]{
+.selectedUserContainer div[id="saveOrCancelButtons"]{
 	width:900px;
 	height: 50px;
 	float: right;
 }
-form[id="saveChangesToUserName"]{
+.selectedUserContainer form[id="saveChangesToUserName"]{
 	text-align: center;
 	width: 160px;
 	margin: 0px 10px 0px 260px; 
 	float: left;
 }
-input[class="btnSaveChanges"]{
+.selectedUserContainer input[class="btnSaveChanges"]{
      font-size: 15px;
 	border-style: solid;
 	border-width: 1px;
@@ -222,14 +222,14 @@ input[class="btnSaveChanges"]{
     height: 30px;
     margin: 5px;
 }
-form[id="cancelChangesToUserName"]{
+.selectedUserContainer form[id="cancelChangesToUserName"]{
 	text-align: center;
 	width: 160px;
 	float: left;
 	margin: 0px 00px 0px 10px; 
     
 }
-input[class="btnCancelChanges"]{
+.selectedUserContainer input[class="btnCancelChanges"]{
      font-size: 15px;
 	border-style: solid;
 	border-width: 1px;
